--- a/OutWeb/Content/sass/_client/_layout.scss
+++ b/OutWeb/Content/sass/_client/_layout.scss
@@ -9,7 +9,7 @@
 
     @include clearfix;
 
-    @include mq-max(break($max-width, -1)) {
+    @include mq-max(break($max-width, +40)) {
         @include rem('padding-left', $wrap-x-spacing);
         @include rem('padding-right', $wrap-x-spacing);
     }
